update metrics article according to comments

--- a/articles/er-metrics-library/er-additional-references.bib
+++ b/articles/er-metrics-library/er-additional-references.bib
@@ -138,3 +138,15 @@ author = {Marina Meilă},
 keywords = {Agreement measures, Clustering, Comparing partitions, Information theory, Mutual information, Similarity measures},
 abstract = {This paper proposes an information theoretic criterion for comparing two partitions, or clusterings, of the same data set. The criterion, called variation of information (VI), measures the amount of information lost and gained in changing from clustering C to clustering C′. The basic properties of VI are presented and discussed. We focus on two kinds of properties: (1) those that help one build intuition about the new criterion (in particular, it is shown the VI is a true metric on the space of clusterings), and (2) those that pertain to the comparability of VI values over different experimental conditions. As the latter properties have rarely been discussed explicitly before, other existing comparison criteria are also examined in their light. Finally we present the VI from an axiomatic point of view, showing that it is the only “sensible” criterion for comparing partitions that is both aligned to the lattice and convexely additive. As a consequence, we prove an impossibility result for comparing partitions: there is no criterion for comparing partitions that simultaneously satisfies the above two desirable properties and is bounded.}
 }
+
+@book{jain1991profiling,
+   title =     {The Art of Computer Systems Performance Analysis: Techniques for Experimental Design, Measurement, Simulation, and Modeling},
+   author =    {Raj K. Jain},
+   publisher = {},
+   isbn =      {0471503363, 9780471503361},
+   year =      {1991},
+   series =    {},
+   edition =   {1},
+   volume =    {1},
+   url =       {http://gen.lib.rus.ec/book/index.php?md5=433a6436756841210c5f20cdf8a7cde1}
+}
