--- a/articles/er-metrics-library/er-software.bib
+++ b/articles/er-metrics-library/er-software.bib
@@ -42,3 +42,10 @@
  howpublished="\url{https://github.com/matchescu/er-metrics}",
  note={Online; Accessed: 26.11.2023},
 }
+@conference {flamegraphs2013,
+title = {Blazing Performance with Flame Graphs},
+year = {2013},
+address = {Washington, D.C.},
+publisher = {USENIX Association},
+month = nov
+}
