--- a/articles/er-metrics-library/er-software.bib
+++ b/articles/er-metrics-library/er-software.bib
@@ -29,7 +29,7 @@
 
 @software{pyproto2017,
   title={PEP-544 - Protocols: Structural subtyping (static duck typing)},
-  author={Ivan Levkivskyi, Jukka Lehtosalo, Łukasz Langa},
+  author={Ivan Levkivskyi, Jukka Lehtosalo, Lukasz Langa},
   year={2017},
   howpublished="\url{https://peps.python.org/pep-0544/}",
   note={Online; Accessed: 26.11.2023},
