--- a/articles/er-metrics-library/er-general.bib
+++ b/articles/er-metrics-library/er-general.bib
@@ -32,7 +32,7 @@
 
 @misc{expdata2023,
   title={Experiment Data},
-  author={Andrei Olar},
+  author={Experiment Data}},
   year={2023},
   howpublished="\url{https://github.com/matchescu/experiment-data}",
   note={Online; accessed 25.10.2023},
