--- a/articles/er-metrics-library/er-software.bib
+++ b/articles/er-metrics-library/er-software.bib
@@ -36,8 +36,8 @@
 }
 
 @software{matchescu-er-metrics2023,
- title={Entity Resolution Metrics Library},
- author={Andrei Olar},
+ title={PyResolveMetrics},
+ author={PyResolveMetrics},
  year={2023},
  howpublished="\url{https://github.com/matchescu/er-metrics}",
  note={Online; Accessed: 26.11.2023},
