--- a/articles/er-metrics-library/main.tex
+++ b/articles/er-metrics-library/main.tex
@@ -28,7 +28,7 @@
 
 % Document
 \begin{document}
-    \title{PyResolveMetrics: A Standards-Compliant, Theory-Consistent, and Efficient Approach to Entity Resolution Metrics}
+    \title{PyResolveMetrics: A Standards-Compliant and Efficient Approach to Entity Resolution Metrics}
     \author{\authorname{Andrei Olar\sup{1}\orcidAuthor{0000-0000-0000-0000}}
     \affiliation{\sup{1}Faculty of Computer Science, Babes-Bolyai University}
     \email{\{andrei.olar\}@ubbcluj.ro}
