fix: make sure title renders along with orcid

--- a/articles/er-metrics-library/main.tex
+++ b/articles/er-metrics-library/main.tex
@@ -33,7 +33,7 @@
     \affiliation{\sup{1}Faculty of Computer Science, Babes-Bolyai University}
     \email{\{andrei.olar\}@ubbcluj.ro}
     }
-    \keywords{Entity resolution,Metrics,Library,Open Source,Standards-Compliant,Theoretical Model,Efficient}
+    \keywords{Entity Resolution,Metrics,Library,Open Source,Standards-Compliant,Theoretical Model,Efficiency}
 
     \abstract{Entity resolution, the process of discerning whether multiple data
     refer to the same real-world entity, is crucial across various domains.
@@ -48,6 +48,8 @@
     contemporary research and application trends, making it a significant tool
     for practitioners and researchers in the field.}
 
+    \onecolumn \maketitle \normalsize \setcounter{footnote}{0} \vfill
+
     \section{Introduction}\label{sec:introduction}
     Entity resolution involves determining whether two pieces of information
     represent the same real-world item.
@@ -61,7 +63,7 @@
 
     Entity resolution has many practical applications ranging from linking
     medical records to diagnosing diseases or ailments, to doing background
-    checks for financial crime or to identifying plagiarism.
+    checks to detect financial crime or to identifying plagiarism.
     Being a problem whose solutions could have a deep impact on both individual
     well-being and human society, we are obviously interested in understanding
     just how well entity resolution solutions fare.
@@ -838,7 +840,8 @@
     that we would like to implement.
 
     \bibliographystyle{apalike}
-    {\small
-    \bibliography{er-general,er-related-work,er-additional-references,er-software}
+    {
+        \small
+        \bibliography{er-general,er-related-work,er-additional-references,er-software}
     }
 \end{document}
